--- a/app.json
+++ b/app.json
@@ -24,10 +24,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+      },
+      "package": "com.niuan.onebitcoin",
+      "versionCode": 1
     }
   }
 }
